...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="yra-kw-dOo" id="Jsx-BI-z6o"/>
                            <outlet property="delegate" destination="yra-kw-dOo" id="S58-WM-EQe"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Shakespeare" id="Ehh-uG-vAN"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="yE5-RP-DmI" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1183.2" y="98.50074962518741"/>
        </scene>
        <!--Navigation Controller-->
...
